(fix + ui): changed logic in the navbar and added styles for navbar on small screens.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,8 @@
 
   --font-roboto: var(--font-roboto); /* Roboto as default */
 }
+
+.accordion-menu-item div[data-orientation="vertical"] {
+  padding-left: 0;
+  padding-right: 0;
+}
